Fixed image alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
+  overflow: hidden;
 }
 
 input {
@@ -56,12 +57,14 @@ hr {
   display: flex;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 /* Mosaic rules */
 .Mosaic {
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto;
+  grid-template-columns: repeat(4, 1fr);
   grid-row-gap: 20px;
   background-color: #282c38;
 }
@@ -71,6 +74,7 @@ hr {
   height: 20px;
   padding: 5px 15px;
   font-weight: 600;
+  grid-column: auto / span 4;
 }
 
 .Mosaic form {
@@ -94,9 +98,21 @@ hr {
   border-right: 2px solid gray;
 }
 
+.Mosaic:last-child {
+  float: right;
+  width: 50%;
+}
+
 /* Image rules */
+.Mosaic img {
+  max-width: 95%;
+  height: auto;
+  justify-self: center;
+}
+
 .Image {
   display: contents;
+  max-width: 120px;
   height: auto;
   margin: 20px;
   border: 2px solid gray;
